Clearer load order & more settings for block temp configs